#ifndef ONETIMEREQUEST_H
#define ONETIMEREQUEST_H

#include "Request.h"
#include "TimeSlot.h"

class OneTimeRequest : public Request {
private:
    TimeSlot requestedTimeSlot;

public:
    OneTimeRequest(int requestId, User* requester, Space* requestedSpace,
                   const TimeSlot& requestedTimeSlot, int participantCount,
                   const std::string& title = "",
                   const std::string& purpose = "",
                   const std::string& requiredFeature = "",
                   const std::string& requiredBuilding = "");

    TimeSlot getRequestedTimeSlot() const;

    bool isRecurring() const override;
    std::string getRequestType() const override;
};

#endif
